--- a/src/app/features/character/component/other/other.component.css
+++ b/src/app/features/character/component/other/other.component.css
@@ -73,3 +73,33 @@ table tr:first-child .content-right {
 .add-button {
     width: 30px;
 }
+
+.menu-div {
+    float: right;
+}
+
+.switch {
+    transform: translate(68px, 10px);
+}
+
+.tab {
+    height: 100%;
+    margin-left: 2%;
+    width: 96%;
+}
+
+.prop-field {
+    width: 280px;
+}
+
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
+}
