--- a/src/app/features/character/component/other/other.component.html
+++ b/src/app/features/character/component/other/other.component.html
@@ -12,21 +12,58 @@
             <mat-card-title [innerText]="'OTHER.NAME' | translate"></mat-card-title>
         </mat-card-header>
         <mat-card-content class="content">
-            <mat-tab-group [(selectedIndex)]="selectedIndex">
+            <mat-tab-group [(selectedIndex)]="selectedIndex" animationDuration="0">
                 <mat-tab *ngFor="let tab of tabs; let index = index" [label]="'[  ' + (index + 1) + '  ]'">
-                    <br>
-                    <mat-form-field appearance="legacy" floatLabel="always">
-                        <mat-label [innerText]="'OTHER.TARGET' | translate"></mat-label>
-                        <mat-select>
-                            <mat-option></mat-option>
-                            <mat-option *ngFor="let prop of propList" [value]="prop">
-                                <span [innerText]="'PROPS.' + prop.toUpperCase() | translate"></span>
-                            </mat-option>
-                        </mat-select>
-                    </mat-form-field>
+                    <div class="tab">
+                        <div class="menu-div">
+                            <button mat-icon-button [matMenuTriggerFor]="menu">
+                                <mat-icon>more_vert</mat-icon>
+                            </button>
+                            <mat-menu #menu="matMenu">
+                                <button mat-menu-item (click)="removeTab(index)" [disabled]="tabs.length < 2">
+                                    <mat-icon>delete</mat-icon>
+                                    <span [innerText]="'SYS.DELETE' | translate"></span>
+                                </button>
+                            </mat-menu>
+                        </div>
+                        <!-- 選択 -->
+                        <br>
+                        <mat-form-field class="prop-field" appearance="legacy" floatLabel="always">
+                            <mat-label [innerText]="'OTHER.TARGET' | translate"></mat-label>
+                            <mat-select [(ngModel)]="infos[selectedIndex].name" (ngModelChange)="onSelectProp($event)">
+                                <mat-option></mat-option>
+                                <mat-option *ngFor="let prop of propList" [value]="prop">
+                                    <span [innerText]="'PROPS.' + prop.toUpperCase() | translate"></span>
+                                </mat-option>
+                            </mat-select>
+                        </mat-form-field>
+                        <!-- 値 -->
+                        <br>
+                        <mat-form-field appearance="legacy" floatLabel="always">
+                            <mat-label [innerText]="'OTHER.TARGET' | translate"></mat-label>
+                            <input matInput 
+                                type="number"
+                                step="0.01"
+                                [value]="infos[selectedIndex].value"
+                                (keyup)="onValueKeyup($event)"
+                            >
+                        </mat-form-field>
+                        <!-- スイッチ -->
+                        <mat-slide-toggle
+                            color="primary" 
+                            class="switch"
+                            [(ngModel)]="infos[selectedIndex].enable"
+                            (ngModelChange)="updateDirtyFlag()"
+                        ></mat-slide-toggle>
+                        <br>
+                        <br>
+                    </div>
                 </mat-tab>
                 <mat-tab disabled>
                     <ng-template mat-tab-label>
+                        <button class="add-button" mat-icon-button (click)="copyTab()" matTooltip="Copy" matTooltipPosition="above">
+                            <mat-icon>content_copy</mat-icon>
+                        </button>
                         <button class="add-button" mat-icon-button (click)="addTab()" matTooltip="Add" matTooltipPosition="above">
                             <mat-icon>add_circle</mat-icon>
                         </button>
