--- a/src/app/features/character/component/other/other.component.html
+++ b/src/app/features/character/component/other/other.component.html
@@ -40,7 +40,7 @@
                         <!-- 値 -->
                         <br>
                         <mat-form-field appearance="legacy" floatLabel="always">
-                            <mat-label [innerText]="'OTHER.TARGET' | translate"></mat-label>
+                            <mat-label [innerText]="'OTHER.TARGETVALUE' | translate"></mat-label>
                             <input matInput 
                                 type="number"
                                 step="0.01"
