--- a/src/app/features/character/component/extra-info/extra-info.component.html
+++ b/src/app/features/character/component/extra-info/extra-info.component.html
@@ -6,9 +6,7 @@
         <mat-form-field appearance="legacy" floatLabel="always">
             <mat-label [innerText]="'GENSHIN.OTHER.OVERRIDE_ELEMENT' | translate"></mat-label>
             <mat-select [(ngModel)]="overrideElement" (ngModelChange)="onChangeElement($event)">
-                <mat-option value="">
-                    <span [innerText]="'GENSHIN.OTHER.DEFAULT_ELEMENT' | translate"></span>
-                </mat-option>
+                <mat-option></mat-option>
                 <mat-option *ngFor="let element of elementList" [value]="element">
                     <span [innerText]="'GENSHIN.OTHER.' + element | translate"></span>
                 </mat-option>
