--- a/src/app/root/head/head.component.html
+++ b/src/app/root/head/head.component.html
@@ -10,6 +10,7 @@
   <span class="menu-title" [innerHTML]="'HOME.TITLE' | translate"></span>
   <span class="spacer"></span>
   <!-- <app-capture-html></app-capture-html> -->
+  <app-enka></app-enka>
   <button mat-icon-button [matMenuTriggerFor]="langSelect">
     <mat-icon>language</mat-icon>
   </button>
