--- a/src/app/root/head/head.component.html
+++ b/src/app/root/head/head.component.html
@@ -7,7 +7,9 @@
   <button mat-icon-button (click)="onClickMenu()">
     <mat-icon>menu</mat-icon>
   </button>
-  <span class="menu-title" [innerHTML]="'HOME.TITLE' | translate" (click)="onClickTitle()"></span>
+  <a class="menu-title" mat-button routerLink="/">
+    <span [innerHTML]="'HOME.TITLE' | translate"></span>
+  </a>
   <span class="spacer"></span>
   <!-- <app-capture-html></app-capture-html> -->
   <app-enka></app-enka>
