--- a/src/app/root/main/main.component.html
+++ b/src/app/root/main/main.component.html
@@ -2,6 +2,7 @@
   <app-head
     class="head"
     [langs]="langs"
+    [hideTitle]="isLargeFlg"
     (langSelectEvent)="changeLang($event)"
     (menuButtonClickEvent)="toggleMenu()"
   ></app-head>
