--- a/src/app/features/character/component/other/other.component.html
+++ b/src/app/features/character/component/other/other.component.html
@@ -12,7 +12,7 @@
             <mat-card-title [innerText]="'OTHER.NAME' | translate"></mat-card-title>
         </mat-card-header>
         <mat-card-content class="content">
-            <mat-tab-group [(selectedIndex)]="selectedIndex" animationDuration="0">
+            <mat-tab-group [(selectedIndex)]="selectedIndex" animationDuration="0" (selectedIndexChange)="onTabChanged()">
                 <mat-tab *ngFor="let tab of tabs; let index = index" [label]="'[  ' + (index + 1) + '  ]'">
                     <div class="tab">
                         <div class="menu-div">
@@ -44,9 +44,11 @@
                             <input matInput 
                                 type="number"
                                 step="0.01"
-                                [value]="infos[selectedIndex].value"
+                                [(ngModel)]="showValue"
                                 (keyup)="onValueKeyup($event)"
                             >
+                            <span matSuffix *ngIf="props_all_percent.includes(infos[selectedIndex].name??'')">%</span>
+                            <span matSuffix *ngIf="!props_all_percent.includes(infos[selectedIndex].name??'')">&nbsp;&nbsp;&nbsp;</span>
                         </mat-form-field>
                         <!-- スイッチ -->
                         <mat-slide-toggle
